--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,11 @@
 @import "base/reset";
 @import "base/typography";
 
+
 //Components
 @import "components/navbar";
 @import "components/header";
+
+body {
+    margin-inline: 12vw;
+}
