commit for netlify V2

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,10 @@
 @import "components/navbar";
 @import "components/header";
 
-body {
-    margin-inline: 12vw;
+// body {
+//     margin-inline: 12vw;
+// }
+
+.section {
+    background-color: blue;
 }
