added loader to about page, need to make navbar disappear when loading

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -5,6 +5,6 @@ $layout-breakpoint-small: 960px;
 $layout-breakpoint-xsmall: 480px;
 
 // Colors
-$background: #f0eff1;
+$background: #ffffff;
 $white: #fff;
 $black: #24242a;
