changing animation from framer motion to gsap

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "components/header";
 @import "components/loader";
 @import "components/about";
+@import "components/transition";
 
 body {
   overflow-y: hidden; /* Hide vertical scrollbar */
