--- a/src/scss/components/_page-loader.scss
+++ b/src/scss/components/_page-loader.scss
@@ -1,9 +1,11 @@
 .pageloader {
   position: absolute;
-  z-index: 1000000000000000;
+  z-index: 1001;
   background-color: #000000;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100vh;
 
@@ -22,4 +24,16 @@
       }
     }
   }
+}
+
+.pageloader_second_bg {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background-color: red;
 }
