header / banner done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,9 +6,11 @@
 //Components
 @import "components/navbar";
 @import "components/header";
+@import "components/home";
 @import "components/about";
 @import "components/main-loader";
 @import "components/page-loader";
+@import "components/banner";
 
 body {
   overflow-y: hidden; /* Hide vertical scrollbar */
