--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -12,11 +12,20 @@
   justify-content: space-between;
 
   .logo {
-    font-weight: 700;
-    font-size: 3.6rem;
-    @media (max-width: $layout-breakpoint-medium) {
-      font-size: 3.2rem;
+    h1 {
+      transition: 0.3s ease-in-out;
+      font-weight: 700;
+      text-transform: uppercase;
+      font-size: 2.3rem;
+      @media (max-width: $layout-breakpoint-medium) {
+        font-size: 1rem;
+      }
+
+      &:hover {
+        color: rgb(156, 156, 156);
+      }
     }
+
   }
 }
 
@@ -25,35 +34,38 @@
   align-items: center;
   justify-content: center;
 
-  li {
-    list-style: none;
-    margin-inline: 20px;
 
-    a {
-      position: relative;
-      text-decoration: none;
-      color: $black;
-      white-space: nowrap;
-      font-weight: 600;
-      transition: 0.3s ease-in-out;
+}
 
-      &::before {
-        margin-bottom: -4px;
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        border-radius: 4px;
-        background-color: $black;
-        bottom: 0;
-        left: 0;
-        opacity: 0;
-        transition: 0.3s ease-in-out;
-      }
+a {
+  position: relative;
+  text-decoration: none;
+  color: $black;
+  transition: 0.3s ease-in-out;
+  margin-inline: 30px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 1.4rem;
 
-      &:hover::before {
-        opacity: 1;
-      }
-    }
+  &:last-child {
+    margin-right: 0px;
+  }
+
+  &::before {
+    margin-bottom: -4px;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: $black;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+  }
+
+  &:hover::before {
+    opacity: 1;
   }
 }
