--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -8,3 +8,5 @@ $layout-breakpoint-xsmall: 480px;
 $background: #ffffff;
 $white: #fff;
 $black: #000000;
+$forest-green: #134e13;
+$black-text-hover: rgb(77, 77, 77);
