--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,4 +1,5 @@
 .navbar {
+  margin-inline: 0 !important;
   font-size: 1.8rem;
   height: 100px;
   display: flex;
@@ -25,7 +26,6 @@
         color: rgb(156, 156, 156);
       }
     }
-
   }
 }
 
@@ -33,39 +33,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
 
-a {
-  position: relative;
-  text-decoration: none;
-  color: $black;
-  transition: 0.3s ease-in-out;
-  margin-inline: 30px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 1.4rem;
-
-  &:last-child {
-    margin-right: 0px;
-  }
-
-  &::before {
-    margin-bottom: -4px;
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    border-radius: 4px;
-    background-color: $black;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
+.navlink {
+  a {
+    position: relative;
+    text-decoration: none;
+    color: $black;
     transition: 0.3s ease-in-out;
-  }
+    margin-left: 4em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 1.4rem;
 
-  &:hover::before {
-    opacity: 1;
+    &::before {
+      margin-bottom: -4px;
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      border-radius: 4px;
+      background-color: $black;
+      bottom: 0;
+      left: 0;
+      opacity: 0;
+      transition: 0.3s ease-in-out;
+    }
+
+    &:hover::before {
+      opacity: 1;
+    }
   }
 }
