added photo albums

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,4 +9,5 @@ $background: #ffffff;
 $white: #fff;
 $black: #000000;
 $forest-green: #134e13;
-$black-text-hover: rgb(77, 77, 77);
+$black-text-hover: rgb(107, 107, 107);
+$divider-color: rgb(212, 212, 212);
