--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -63,7 +63,19 @@ $letter-spacing-banner-text: 42px;
   position: absolute;
   bottom: 48px;
   transition: 0.5s ease-in-out;
-  cursor: pointer;
+  animation: bounce 2s infinite ease-in-out;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-5px)
+  }
+  50% {
+    transform: translateY(5px)
+  }
+  100% {
+    transform: translateY(-5px)
+  }
 }
 
 .main-text {
