--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -79,7 +79,7 @@ $letter-spacing-banner-text: 42px;
 }
 
 .main-text {
-  overflow: hidden;
+  // overflow: hidden;
   font-size: 8rem;
   text-transform: uppercase;
   letter-spacing: 42px;
