--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,5 +9,10 @@ $background: #ffffff;
 $white: #fff;
 $black: #000000;
 $forest-green: #134e13;
+
+// Text
+$text-color: rgb(175, 175, 175);
 $black-text-hover: rgb(107, 107, 107);
+
+//Global
 $divider-color: rgb(212, 212, 212);
