--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "components/banner";
 @import "components/home-about";
 @import "components/photo-albums";
+@import "components/footer";
 
 body {
   overflow-x: hidden;
