--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -1,6 +1,7 @@
 $letter-spacing-banner-text: 42px;
 
 .banner {
+  visibility: hidden;
   background-color: $white;
   height: 100vh;
 
@@ -63,7 +64,7 @@ $letter-spacing-banner-text: 42px;
   position: absolute;
   bottom: 48px;
   transition: 0.5s ease-in-out;
-  animation: bounce 2s infinite ease-in-out;
+  // animation: bounce 2s infinite ease-in-out;
 }
 
 @keyframes bounce {
