--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -14,10 +14,19 @@
 
   .logo {
     h1 {
+      letter-spacing: 1px;
       transition: 0.3s ease-in-out;
       font-weight: 700;
       text-transform: uppercase;
       font-size: 2.3rem;
+      color: $black;
+      text-decoration: none;
+
+      &a:hover, a:visited, a:link, a:active
+      {
+          text-decoration: none;
+      }
+
       @media (max-width: $layout-breakpoint-medium) {
         font-size: 1rem;
       }
