--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -5,7 +5,8 @@ $card-content-padding: 1em;
 .divider-text {
     color: grey;
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    letter-spacing: 3px;
 }
 
 .divider {
@@ -65,6 +66,7 @@ $card-content-padding: 1em;
                     }
 
                     .content-header {
+                        padding-block: 0.7em;
                         line-height: 1.4;
                         color: $white;
 
