--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -21,6 +21,7 @@
                         }
 
                         .contact-paragraph {
+                            line-height: 1.7;
                             color: grey;
                             padding-block: 2em;
                             font-size: 1.4rem;
@@ -44,7 +45,7 @@
                     }
                     .socials {
                         font-size: 2rem;
-                        padding-top: 6em;
+                        padding-top: 3.5em;
 
                         .social-link {
                             .icon {
